git-svn-id: https://plugins.svn.wordpress.org/advanced-access-manager/trunk@453669 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/wpaccess_style.css
+++ b/css/wpaccess_style.css
@@ -344,7 +344,7 @@ div.sexy-bookmarks ul.socials a {
     padding-left: 7px;
 }
 
-.save-postinfo{
+.save-postinfo, .save-postinfo-all{
     float:right;
     margin-bottom: 5px;
     margin-right: 5px;
@@ -457,4 +457,13 @@ div.sexy-bookmarks ul.socials a {
     font-style: italic;
     font-size: 12px;
     margin-top: 10px;
+}
+
+.role-name{
+    font-weight: bold;
+}
+
+.donate{
+    text-align: center;
+    margin-top: 15px;
 }
