git-svn-id: https://plugins.svn.wordpress.org/advanced-access-manager/trunk@468871 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/view/html/admin_options.html
+++ b/view/html/admin_options.html
@@ -7,7 +7,7 @@
         <div class="message-passive" id="error-message">
             <div class="ui-state-error ui-corner-all" style="padding: 0pt 0.7em;"> 
                 <p><span class="ui-icon ui-icon-alert" style="float: left; margin-right: 0.3em;"></span> 
-                    <strong>###LABEL_3###:</strong> ###LABEL_4###: "<span id="error-text"></span>". ###LABEL_5### <a href="mailto:whimba@gmail.com" title="Send an Email">whimba@gmail.com</a></p>
+                    <strong>###LABEL_3###:</strong> ###LABEL_4###: "<span id="error-text"></span>". ###LABEL_5###</p>
             </div>
         </div>
         <div class="###message_class###">
@@ -467,7 +467,7 @@
         </div>
     </div>
     <div id="addons-notice" class="dialog" title="###LABEL_111###">
-        <p>###LABEL_112### <a href="http://whimba.com/plugins/advanced-access-manager/add-ons/" target="_blank">###LABEL_113###</a></p>
+        <p>###LABEL_112### <a href="http://whimba.org/add-ons" target="_blank">###LABEL_113###</a></p>
     </div>
     <div id="addon-proposal" class="dialog" title="###LABEL_114###">
         <p><span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 5px 0;"></span><span id="addon-message"></span></p>
