git-svn-id: https://plugins.svn.wordpress.org/advanced-access-manager/trunk@486709 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/view/css/codemirror/codemirror.css
+++ b/view/css/codemirror/codemirror.css
@@ -21,6 +21,7 @@
 .CodeMirror {
   line-height: 1em;
   font-family: monospace;
+  border: 1px solid #999999;
 }
 
 .CodeMirror-scroll {
@@ -95,3 +96,9 @@ span.CodeMirror-selected {
 
 .CodeMirror-matchingbracket {color: #0f0 !important;}
 .CodeMirror-nonmatchingbracket {color: #f22 !important;}
+
+.cm-s-default span.cm-comment {color: #aaa; font-style : italic;}
+.cm-s-default span.cm-section {color: #666cd3;}
+.cm-s-default span.cm-array {color: #dba121 ;}
+.cm-s-default span.cm-string {color: #993333;}
+.cm-s-default span.cm-number {color: #660066;}
