git-svn-id: https://plugins.svn.wordpress.org/advanced-access-manager/trunk@491491 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/view/html/admin_options.html
+++ b/view/html/admin_options.html
@@ -463,9 +463,8 @@
                             <div class="sexy-bookmarks">
                                 <ul class="socials">
                                     <li class="sexy-mail"><a href="mailto:whimba@gmail.com" title="###LABEL_93###">whimba@gmail.com</a></li>
-                                    <li class="sexy-facebook"><a href="http://www.facebook.com/pages/Whimba/113734005389430" target="_blank" title="###LABEL_94###">Whimba.com</a></li>
+                                    <li class="sexy-facebook"><a href="http://www.facebook.com/pages/whimba" target="_blank" title="###LABEL_94###">Whimba.com</a></li>
                                     <li class="sexy-twitter"><a href="http://www.twitter.com/whimba" target="_blank" title="###LABEL_95###">Whimba</a></li>
-                                    <li class="sexy-linkedin"><a href="http://www.linkedin.com/pub/vasyl-martyniuk/26/654/930" target="_blank" title="###LABEL_96###">LinkedIn</a></li>
                                 </ul>
                             </div>
                             <br class="clear" />
