git-svn-id: https://plugins.svn.wordpress.org/advanced-access-manager/trunk@493661 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/view/css/wpaccess_style.css
+++ b/view/css/wpaccess_style.css
@@ -21,11 +21,11 @@
 }
 
 .plugin-logo{
-    background: url('images/logo.png') no-repeat;
+    background: url('images/aam_manager.png') no-repeat;
     float:left;
-    margin:10px 0 10px 30px;
-    width:40px;
-    height:40px;
+    margin-left:30px;
+    width:80px;
+    height:80px;
 }
 
 .delete-role-table{
