git-svn-id: https://plugins.svn.wordpress.org/advanced-access-manager/trunk@494409 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/view/html/admin_options.html
+++ b/view/html/admin_options.html
@@ -322,7 +322,7 @@
                                 </div>
                                 <div id="tabs-5">
                                     <p>###LABEL_157###</p>
-                                    <textarea id="access_config" name="wpaccess[access_config]">###access_config###</textarea>
+                                    <textarea id="access_config" name="wpaccess[config_press]">###access_config###</textarea>
                                 </div>
                             </div>
                         </div>
