--- a/view/css/wpaccess_style.css
+++ b/view/css/wpaccess_style.css
@@ -182,7 +182,9 @@
 }
 
 .metabox-item{
-    width: 280px;
+    width: auto;
+    max-width: 320px;
+    min-width:280px;
     float:left;
     margin-left: 10px;
 }
@@ -331,114 +333,6 @@
     font-weight: bold;
 }
 
-.feedback{
-    width: 100%;
-    font-style: italic;
-    text-align: center;
-    font-size: 14px;
-    font-family: verdana,arial,helvetica,sans-serif;
-    padding-bottom: 3px;
-}
-
-.socials{
-    margin: 2px auto;
-    clear: both;
-}
-
-.socials li{
-    display:inline;
-    float:left;
-    list-style-type:none;
-    margin: 0 0 0 10px;
-    height:64px;
-    width:64px;
-    cursor:pointer;
-    padding:0;
-    background-color:transparent;
-    border:0 none;
-    outline:0 none;
-}
-
-.socials li a{
-    display:block !important;
-    width:64px !important;
-    height:64px !important;
-    text-indent: -9999px !important;
-    background-color:transparent !important;
-}
-
-.socials .support{
-    background: url('images/support.png') no-repeat;
-    filter:alpha(opacity=50);
-    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=50);
-    opacity:0.5;
-}
-.socials .support:hover{
-    filter:alpha(opacity=100);
-    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=100);
-    opacity:1.0;
-}
-
-.socials .facebook{
-    background: url('images/facebook.png') no-repeat;
-    filter:alpha(opacity=50);
-    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=50);
-    opacity:0.5;
-}
-.socials .facebook:hover{
-    filter:alpha(opacity=100);
-    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=100);
-    opacity:1.0;
-}
-
-.socials .twitter{
-    background: url('images/twitter.png') no-repeat;
-    filter:alpha(opacity=50);
-    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=50);
-    opacity:0.5;
-}
-.socials .twitter:hover{
-    filter:alpha(opacity=100);
-    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=100);
-    opacity:1.0;
-}
-
-.socials .email{
-    background: url('images/email.png') no-repeat;
-    filter:alpha(opacity=50);
-    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=50);
-    opacity:0.5;
-}
-.socials .email:hover{
-    filter:alpha(opacity=100);
-    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=100);
-    opacity:1.0;
-}
-
-.socials .wordpress{
-    background: url('images/wordpress.png') no-repeat;
-    filter:alpha(opacity=50);
-    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=50);
-    opacity:0.5;
-}
-.socials .wordpress:hover{
-    filter:alpha(opacity=100);
-    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=100);
-    opacity:1.0;
-}
-
-.socials .donate{
-    background: url('images/donate.png') no-repeat;
-    filter:alpha(opacity=50);
-    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=50);
-    opacity:0.5;
-}
-.socials .donate:hover{
-    filter:alpha(opacity=100);
-    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=100);
-    opacity:1.0;
-}
-
 .misc-site-section{
     margin: 10px 0 0 10px;
 }
@@ -509,10 +403,3 @@
 .help { background: #9FDAEE; border: 1px solid #2BB0D7;	}
 .info { background: #9FDAEE; border: 1px solid #2BB0D7;	}
 .warning { background: #FFFFAA; border: 1px solid #FFAD33; }
-
-.info-big{
-    background: url('images/Info-big.png') no-repeat;
-    width: 48px;
-    height: 48px;
-    z-index: 100;
-}
