--- a/view/html/admin_options.html
+++ b/view/html/admin_options.html
@@ -3,6 +3,12 @@
         <div class="plugin-logo"></div>
         <div class="plugin-title"><h2>###LABEL_1###</h2></div>
         <br class="clear" />
+        <div class="message-passive" style="width:70%;" id="manager-error-message">
+            <div class="ui-state-error ui-corner-all" style="padding: 0pt 0.7em;"> 
+                <p><span class="ui-icon ui-icon-alert" style="float: left; margin-right: 0.3em;"></span> 
+                    <strong>###LABEL_3###:</strong> <span class="manager-error-text"></span></p>
+            </div>
+        </div>
         <div class="message-passive" id="error-message">
             <div class="ui-state-error ui-corner-all" style="padding: 0pt 0.7em;"> 
                 <p><span class="ui-icon ui-icon-alert" style="float: left; margin-right: 0.3em;"></span> 
@@ -18,6 +24,8 @@
         <br class="clear" />
         ###nonce###
         <input type="hidden" name="submited" value="1" />
+        <input type="hidden" id="error" value="###error_indicator###" />
+        <input type="hidden" id="error_message" value="###error_message###" />
         <input type="hidden" name="current_role" id="current_role" value="###current_role_id###" />
         <input type="hidden" name="current_user" id="current_user" value="###current_user_id###" />
         <div class="postbox-container" style="width:70%;">
@@ -36,6 +44,7 @@
                                     <li><a href="#tabs-4">###LABEL_10###</a></li>
                                     <li><a href="#tabs-5">###LABEL_80###</a></li>
                                 </ul>
+                                <!-- ###MAIN_MENU_TAB### begin-->
                                 <div id="tabs-1">
                                     <div class="ui-state-highlight ui-corner-all dialog" id="sorting-tip" style="float:left; padding: 3px; margin-top: 2px;"> 
                                         <span class="ui-icon ui-icon-info" style="float: left; margin-right: 2px;"></span>
@@ -43,7 +52,6 @@
                                     </div>
                                     <a href="#" class="button" id="reorganize">###LABEL_12###</a>
                                     <br class="clear" />
-                                    <!-- ###MAIN_MENU_LIST### begin-->
                                     <div id="main-menu-options">
                                         <!-- ###MAIN_MENU_ITEM### begin-->
                                         <div id="###id###">
@@ -68,8 +76,9 @@
                                         </div>
                                         <!-- ###MAIN_MENU_ITEM### end-->
                                     </div>
-                                    <!-- ###MAIN_MENU_LIST### end-->
                                 </div>
+                                <!-- ###MAIN_MENU_TAB### end-->
+                                <!-- ###METABOX_TAB### begin-->
                                 <div id="tabs-2">
                                     <div id="initiate-message">
                                         <p>###LABEL_14###</p>
@@ -84,7 +93,6 @@
                                         <br class="clear" />
                                     </div>
                                     <div id="progressbar"></div>
-                                    <!-- ###METABOX_LIST### begin-->
                                     <div id="metabox-list">
                                         <!-- ###METABOX_LIST_ITEM### begin-->
                                         <div>
@@ -117,13 +125,33 @@
                                                         </table>
                                                     </div>
                                                 </div>
-                                                <!-- ###POST_METABOXES_ITEM### end--> 
+                                                <!-- ###POST_METABOXES_ITEM### end-->
+                                                <!-- ###WIDGET_ITEM### begin-->    
+                                                <div class="postbox metabox-item" >
+                                                    <h3 style="cursor: default;"><span>###title###</span></h3>
+                                                    <div class="inside">
+                                                        <table class="metabox-description">
+                                                            <tbody>
+                                                                <tr>
+                                                                    <th>###LABEL_112###:</th>
+                                                                    <td><span class="metabox-priority">###classname###</span></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <th>###LABEL_113###:</th>
+                                                                    <td><span class="metabox-position" title="###description###">###description_short###</span></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <th>###LABEL_21###:</th>
+                                                                    <td><input type="checkbox" name="wpaccess[metabox][###classname###]" value="1" ###checked### /></td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+                                                </div>
+                                                <!-- ###WIDGET_ITEM### end-->
                                                 <!-- ###POST_METABOXES_LIST### end--> 
                                             </div>
                                         </div>
-                                        <!--
-                                        
-                                        -->
                                         <!-- ###METABOX_LIST_ITEM### end-->
                                         <!-- ###METABOX_LIST_EMPTY### begin-->
                                         <div class="ui-widget">
@@ -134,8 +162,9 @@
                                         </div>
                                         <!-- ###METABOX_LIST_EMPTY### end-->
                                     </div>
-                                    <!-- ###METABOX_LIST### end-->
                                 </div>
+                                <!-- ###METABOX_TAB### end-->
+                                <!-- ###CAPABILITY_TAB### begin-->
                                 <div id="tabs-3">
                                     <!-- ###CAPABILITY_LIST### begin-->
                                     <!-- ###CAPABILITY_ITEM### begin-->
@@ -150,15 +179,14 @@
                                         <!-- ###CAPABILITY_DELETE### end-->
                                     </div>
                                     <!-- ###CAPABILITY_ITEM### end-->
-                                    <br class="clear" />
                                     <!-- ###CAPABILITY_LIST### end-->
                                     <!-- ###CAPABILITY_LIST_EMPTY### begin-->
                                     <div class="ui-state-error ui-corner-all" style="padding: 0pt 0.7em;"> 
                                         <p><span class="ui-icon ui-icon-alert" style="float: left; margin-right: 0.3em;"></span> 
                                             <strong>###LABEL_3###:</strong> ###LABEL_146###</p>
                                     </div>
-                                    <br class="clear" />
                                     <!-- ###CAPABILITY_LIST_EMPTY### end-->
+                                    <br class="clear" />
                                     <div class="additional-panel">
                                         <div class="new-capability">
                                             <a href="#" class="button" id="new-capability" title="###LABEL_26###">###LABEL_27###</a>
@@ -174,6 +202,8 @@
                                         <br class="clear" />
                                     </div>
                                 </div>
+                                <!-- ###CAPABILITY_TAB### end-->
+                                <!-- ###RESTRICTION_TAB### begin-->
                                 <div id="tabs-4">
                                     <div class="tree-holder postbox">
                                         <div id="sidetreecontrol"><a href="#">###LABEL_40###</a>&nbsp;|&nbsp;<a href="#">###LABEL_41###</a></div>
@@ -319,10 +349,13 @@
                                     </div>
                                     <br class="clear" />
                                 </div>
+                                <!-- ###RESTRICTION_TAB### end-->
+                                <!-- ###CONFIG_PRESS_TAB### begin-->
                                 <div id="tabs-5">
                                     <p>###LABEL_157###</p>
                                     <textarea id="access_config" name="wpaccess[config_press]">###access_config###</textarea>
                                 </div>
+                                <!-- ###CONFIG_PRESS_TAB### end-->
                             </div>
                         </div>
                     </div>
@@ -333,6 +366,7 @@
         <div class="postbox-container" style="width:20%; margin-left: 10px;">
             <div class="metabox-holder">	
                 <div class="meta-box-sortables">
+                    <!-- ###SUBMIT_METABOX### begin-->
                     <div id="submitdiv" class="postbox">
                         <div class="handlediv" title="###LABEL_72###"><br /></div>
                         <h3 class="hndle"><span>###LABEL_73###</span></h3>
@@ -377,7 +411,6 @@
                                             <a href="#" class="change-user hide-if-no-js" tabindex="4">###LABEL_75###</a>
                                             <div id="user-select" class="hide-if-js">
                                                 <select name="user" id="user" tabindex="4">
-                                                    <option value="0">###LABEL_120###</option>
                                                     <!-- ###USER_LIST### begin-->
                                                     <option value="###value###" ###selected### >###title###</option>
                                                     <!-- ###USER_LIST### end-->
@@ -401,6 +434,8 @@
                             </div>
                         </div>
                     </div>
+                    <!-- ###SUBMIT_METABOX### end-->
+                    <!-- ###ROLE_METABOX### begin-->
                     <div id="metabox-wpaccess-rolemanager" class="postbox" >
                         <div class="handlediv" title="###LABEL_72###"><br /></div>
                         <h3 class="hndle"><span>###LABEL_83###</span></h3>
@@ -453,39 +488,16 @@
                             </div>
                         </div>
                     </div>
-                    <div id="metabox-support" class="postbox">
-                        <div class="handlediv" title="###LABEL_72###"><br /></div>
-                        <h3 class="hndle"><span>###LABEL_92###</span></h3>
-                        <div class="inside">
-                            <ul class="socials">
-                                <li class="support" title="###LABEL_93###"><a href="http://whimba.org/support" target="_blank">whimba.org</a></li>
-                                <li class="facebook" title="###LABEL_94###"><a href="http://www.facebook.com/whimba" target="_blank">Whimba.org</a></li>
-                                <li class="twitter" title="###LABEL_95###"><a href="http://www.twitter.com/whimba" target="_blank">Whimba</a></li>
-                            </ul>
-                            <br class="clear" />
-                        </div>
-                    </div>
-                    <div id="metabox-support" class="postbox">
-                        <div class="handlediv" title="###LABEL_72###"><br /></div>
-                        <h3 class="hndle"><span>###LABEL_159###</span></h3>
-                        <div class="inside">
-                            <div class="feedback">
-                                Your feedback if very important.<br/>Please send email, vote for AAM or Donate.
-                            </div>
-                            <ul class="socials">
-                                <li class="email" title="###LABEL_160###"><a href="mailto:whimba@gmail.com">Send Email</a></li>
-                                <li class="wordpress" title="###LABEL_2###"><a href="http://wordpress.org/extend/plugins/advanced-access-manager/" target="_blank">Advanced Access Manager</a></li>
-                                <li class="donate" title="###LABEL_158###"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KMUXLE3XFWRFC" target="_blank">PayPal Donation</a></li>
-                            </ul>
-                            <br class="clear" />
-                        </div>
-                    </div>
+                    <!-- ###ROLE_METABOX### end-->
                 </div>
             </div>
         </div>
     </form>
     <div id="dialog-delete-confirm" class="dialog" title="###LABEL_97###">
         <p><span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 5px 0;"></span>###LABEL_98### - <b><span id="delete-role-title"></span></b></p>
+    </div>
+    <div id="dialog-error" class="dialog" title="###LABEL_25###">
+        <p><span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 5px 0;"></span><span id="dialog_error_message"></span></p>
     </div>
     <div id="dialog-reorder-confirm" class="dialog" title="###LABEL_99###">
         <p><span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 5px 0;"></span>###LABEL_100### - <b><span id="role-title"></span></b></p>
@@ -526,5 +538,4 @@
         <p><span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 5px 0;"></span><span id="addon-message"></span></p>
     </div>
     <div id="dialog-firsttime" class="dialog" title="###LABEL_115###">###LABEL_147###</div>
-    <iframe id="exportIFrame" src="" style="display:none;" ></iframe>
 </div>
